manifests/quay-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quay-redis
  template:
    metadata:
      labels:
        app: quay-redis
    spec:
      containers:
      - image: registry.redhat.io/rhel8/redis-6
        name: redis
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 2m
            memory: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: quay-redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: quay-redis
