manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay
spec:
  to:
    kind: Service
    name: quay-app
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
